<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home"
            tools:ignore="HardcodedText" />
        <item android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_timetable"
            android:title="Timetable"
            tools:ignore="HardcodedText" />
        <item android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="Map"
            tools:ignore="HardcodedText" />
        <item android:id="@+id/nav_signin"
            android:icon="@drawable/ic_signin"
            android:title="Sign In"
            tools:ignore="HardcodedText" />
        <item android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="Profile"
            tools:ignore="HardcodedText" />
    </group>

</menu>