<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainLoginActivity">

    <Button
        android:id="@+id/signin_main"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:background="#8A7360"
        android:text="@string/sign_in"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <!-- only leave the following if converted to fragment
    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/***"
        android:name="ch.epfl.sdp.fragments_drawer.***"/>
    -->

</androidx.constraintlayout.widget.ConstraintLayout>